<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <!-- "000 Punkte" oben links -->
        <TextView
            android:id="@+id/textViewPoints"
            style="@style/Punkte"/>

        <!-- "000 min schon gelernt" oben rechts -->
        <TextView
            android:id="@+id/textViewTimeLearned"
            style="@style/Minuten"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:layout_editor_absoluteX="7dp">

        <Button
            android:id="@+id/evaluate1"
            style="@style/blauerKreisButton"
            android:text="@string/very_productiv" />

        <Button
            android:id="@+id/evaluate2"
            style="@style/blauerKreisButton"
            android:text="@string/productiv" />

        <Button
            android:id="@+id/evaluate3"
            style="@style/blauerKreisButton"
            android:text="@string/neutral"
            app:layout_constraintTop_toBottomOf="@+id/buttenShop" />

        <Button
            android:id="@+id/evaluate4"
            style="@style/blauerKreisButton"
            android:text="@string/not_so_productive"
            app:layout_constraintTop_toBottomOf="@+id/buttonLerneinheit" />

        <Button
            android:id="@+id/evaluate5"
            style="@style/blauerKreisButton"
            android:text="@string/not_productive"
            app:layout_constraintTop_toBottomOf="@+id/buttonLerneinheit" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="28dp"
        android:text="@string/learning_unit_header"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>