<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <!-- "000 Punkte" oben links -->
        <TextView
            android:id="@+id/textViewPoints"
            style="@style/Punkte" />

        <!-- "000 min schon gelernt" oben rechts -->
        <TextView
            android:id="@+id/textViewTimeLearned"
            style="@style/Minuten" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <Button
            android:id="@+id/buttonTemplates"
            style="@style/blauerKreisButton"
            android:text="@string/learning_templates"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <Button
            android:id="@+id/buttonStart"
            style="@style/blauerKreisButton"
            android:text="@string/start_learning_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTemplates" />


        <Button
            android:id="@+id/buttonLerneinheit"
            style="@style/blauerKreisButton"
            android:text="@string/previous_learning_units"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttenShop" />

        <Button
            android:id="@+id/buttonErrinerung"
            style="@style/blauerKreisButton"
            android:text="@string/create_reminder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLerneinheit" />

        <Button
            android:id="@+id/buttenShop"
            style="@style/blauerKreisButton"
            android:text="@string/shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStart" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="76dp"
        android:text="EasyStudyTimer"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonClose"
        style="@style/zurueckButton"
        android:text="@string/close"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>