<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <!-- "000 Punkte" oben links -->
        <TextView
            android:id="@+id/textViewPoints"
            style="@style/Punkte" />

        <!-- "000 min schon gelernt" oben rechts -->
        <TextView
            android:id="@+id/textViewTimeLearned"
            style="@style/Minuten" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="76dp"
        android:text="@string/learning_history_header"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TableLayout
            android:id="@+id/historyTable"
            style="@style/hinterGrundTable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:id="@+id/headerRow"
                style="@style/vorderGrundTable">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/lerneinheiten"
                    android:text="@string/subject" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/lerneinheiten"
                    android:text="@string/minutes" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/lerneinheiten"
                    android:text="@string/valudation" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/lerneinheiten"
                    android:text="@string/date" />
            </TableRow>
        </TableLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/buttonBack"
        style="@style/zurueckButton"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>