<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <!-- "000 Punkte" oben links -->
        <TextView
            android:id="@+id/textViewPoints"
            style="@style/Punkte" />

        <!-- "000 min schon gelernt" oben rechts -->
        <TextView
            android:id="@+id/textViewTimeLearned"
            style="@style/Minuten" />

    </RelativeLayout>

    <LinearLayout
        style="@style/hinterGrundTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/vorderGrundTable"
            android:gravity="center">

            <TextView
                android:id="@+id/course"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/start_learning_unit"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/vorderGrundTable"
            android:layout_width="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/timeControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="100dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/continue_timer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            style="@style/vorderGrundTable"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle">

                </ImageView>

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="20"
                    android:textColor="@color/black"
                    android:textSize="100sp"
                    android:visibility="visible"/>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="145dp"
                    android:layout_height="176dp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>


            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/timer_label"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/vorderGrundTable"
            android:gravity="center">

            <Button
                android:id="@+id/buttonAbort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="100dp"
                android:backgroundTint="@color/darkblue"
                android:text="@string/abort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>